<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_about_us"
        android:title="@string/action_about_us"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/action_search"
        android:orderInCategory="100"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
</menu>
